test/tests/stages/8_loops/valid/for_absent_post.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  -
  const int(2147483647)
  ;
  for
  (
  ;
  identifier(a)
  %
  const int(5)
  !=
  const int(0)
  ;
  )
  {
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  }
  return
  identifier(a)
  %
  const int(5)
  ||
  identifier(a)
  >
  const int(0)
  ;
  }
