test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_default.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(1)
  ;
  case
  const int(2)
  :
  return
  const int(2)
  ;
  default
  :
  return
  const int(2)
  ;
  }
  }
